successful ssl (only) connection between iam and postgres

--- a/config/db/postgres/postgresql.conf
+++ b/config/db/postgres/postgresql.conf
@@ -102,10 +102,10 @@ max_connections = 100			# (change requires restart)
 
 # - SSL -
 
-#ssl = off
-#ssl_ca_file = ''
+ssl = on
+ssl_ca_file = 'root.crt'
 #ssl_cert_file = 'server.crt'
-#ssl_crl_file = ''
+ssl_crl_file = 'root.crl'
 #ssl_crl_dir = ''
 #ssl_key_file = 'server.key'
 #ssl_ciphers = 'HIGH:MEDIUM:+3DES:!aNULL' # allowed SSL ciphers
