--- a/apps/iam/package.json
+++ b/apps/iam/package.json
@@ -14,5 +14,8 @@
     "game"
   ],
   "author": "gustavo",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pg": "^8.7.3"
+  }
 }
