--- a/apps/delegate/package.json
+++ b/apps/delegate/package.json
@@ -13,5 +13,8 @@
     "game"
   ],
   "author": "gustavo",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mongodb": "^4.4.0"
+  }
 }
