--- a/apps/delegate/package.json
+++ b/apps/delegate/package.json
@@ -15,6 +15,8 @@
   "author": "gustavo",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
     "mongodb": "^4.4.0"
   }
 }
