moved files and game state is now displayed

--- a/apps/delegate/package.json
+++ b/apps/delegate/package.json
@@ -15,6 +15,9 @@
   "author": "gustavo",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.0"
   }
 }
