before aws transition

--- a/apps/webapp/chess/angular.json
+++ b/apps/webapp/chess/angular.json
@@ -74,7 +74,11 @@
               "browserTarget": "chess:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "options": {
+            "ssl": true,
+            "proxyConfig": "./proxy.config.json"
+          },
+          "defaultConfiguration": "production"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
