--- a/apps/delegate/package.json
+++ b/apps/delegate/package.json
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "chess.js": "^0.12.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.0"
