docker ready - still having issues with app and iam

--- a/apps/webapp/chess/angular.json
+++ b/apps/webapp/chess/angular.json
@@ -76,6 +76,8 @@
           },
           "options": {
             "ssl": true,
+            "sslCert": "/usr/ssl/webapp.crt",
+            "sslKey": "/usr/ssl/webapp.key",
             "proxyConfig": "./proxy.config.json"
           },
           "defaultConfiguration": "production"
