Updated backed end to receive parameters in the body. Updated interceptor, updating config adds headers to the app.

--- a/apps/webapp/chess/proxy.config.json
+++ b/apps/webapp/chess/proxy.config.json
@@ -14,5 +14,15 @@
         "secure": false,
         "strictSSL": true,
         "rejectUnauthorzied": true
+    },
+    "/*": {
+        "headers":{
+            "X-Frame-Options": "DENY",
+            "X-Content-Type-Options": "nosniff",
+            "Content-Security-Policy": "default-src 'self'",
+            "Access-Control-Allow-Origin": "*",
+            "Content-Type": "application/json",
+            "X-Powered-By": ""
+        }
     }
 }
