--- a/apps/webapp/chess/angular.json
+++ b/apps/webapp/chess/angular.json
@@ -24,7 +24,9 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/robots.txt",
+              "src/sitemap.xml"
             ],
             "styles": [
               "src/styles.css"
@@ -78,7 +80,10 @@
             "ssl": true,
             "sslCert": "./ssl/webapp.crt",
             "sslKey": "./ssl/webapp.key",
-            "proxyConfig": "./proxy.config.json"
+            "proxyConfig": "./proxy.config.json",
+            "headers": {
+              "X-Powered-By": ""
+            }
           },
           "defaultConfiguration": "production"
         },
@@ -97,7 +102,9 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/robots.txt",
+              "src/sitemap.xml"
             ],
             "styles": [
               "src/styles.css"
