--- a/config/db/mongodb/mongod.conf
+++ b/config/db/mongodb/mongod.conf
@@ -1,10 +1,8 @@
 systemLog:
   destination: file
-  # path: <log_path>
   path: /usr/local/var/log/mongodb/mongo.log
   logAppend: true
 storage:
-  # dbPath: <db_path>
   dbPath: /usr/local/var/mongodb
 net:
   #bindIp: cs681.chess.net
@@ -13,6 +11,7 @@ net:
   ipv6: true
   tls:
     mode: requireTLS
-    certificateKeyFile: /etc/ssl/mongodb.crt
-    CAFile: /etc/ssl/caToValidateClientCertificates.crt
-    CRLFile: /etc/ssl/revokedCertificates.crl
+    certificateKeyFile: /etc/ssl/mongodb.pem
+    CAFile: /etc/ssl/delegate.pem
+    allowConnectionsWithoutCertificates: false
+    #CRLFile: /etc/ssl/revokedCertificates.crl
