--- a/config/db/postgres/pg_hba.conf
+++ b/config/db/postgres/pg_hba.conf
@@ -82,8 +82,13 @@
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-local   all             all                                     scram-sha-256
+local   all             all                                     scram-sha-256           
 # IPv4 local connections:
 hostssl    all             all             127.0.0.1/32            scram-sha-256        clientcert=verify-full
 # IPv6 local connections:
 hostssl    all             all             ::1/128                 scram-sha-256        clientcert=verify-full
+# Allow replication connections from localhost, by a user with the
+# replication privilege.
+#  local   replication     all                                     scram-sha-256
+#  hostssl    replication     all             127.0.0.1/32            scram-sha-256
+#  hostssl    replication     all             ::1/128                 scram-sha-256
