--- a/apps/delegate/package.json
+++ b/apps/delegate/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.4.0"
+    "mongodb": "^4.4.0",
+    "snyk": "^1.913.0"
   }
 }
