--- a/apps/iam/package.json
+++ b/apps/iam/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "snyk": "^1.913.0"
   }
 }
